# inferbench

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
llm_bench/: config.py
llm_bench/metrics/: __init__.py  aggregator.py  gpu_monitor.py  timing.py
